Set theme jekyll-theme-minimal and migrate Page Generator content

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,8 @@
 markdown: kramdown
 path: http://facet.github.io
+
+title: facet
+description: extensible, framework agnostic JSON API platform for Node.js
+google_analytics: UA-52060208-1
+show_downloads: true
+theme: jekyll-theme-minimal
